*SVN*

* Deprecate start_form_tag and end_form_tag.  Use form_tag / '</form>' from now on.  [Rick]

* Added block-usage to PrototypeHelper#form_remote_tag, document block-usage of FormTagHelper#form_tag [Rick]

* Add a 0 margin/padding div around the hidden _method input tag that form_tag outputs.  [Rick]

* Added block-usage to TagHelper#content_tag [DHH]. Example:

   <% content_tag :div, :class => "strong" %>
     Hello world!
   <% end %>
  
  Will output:
    <div class="strong">Hello world!</div>

* Deprecated UrlHelper#link_to_image and UrlHelper#link_to :post => true #6409 [BobSilva]

* Upgraded NumberHelper with number_to_phone support international formats to comply with ITU E.123 by supporting area codes with less than 3 digits, added precision argument to number_to_human_size (defaults to 1) #6421 [BobSilva]

* Fixed that setting RAILS_ASSET_ID to "" should not add a trailing slash after assets #6454 [BobSilva/chrismear]

* Force *_url named routes to show the host in ActionView [Rick]

  <%= url_for ... %> # no host
  <%= foo_path %>    # no host
  <%= foo_url %>     # host!

* Add support for converting blocks into function arguments to JavaScriptGenerator#call and JavaScriptProxy#call. [Sam Stephenson]

* Add JavaScriptGenerator#literal for wrapping a string in an object whose #to_json is the string itself. [Sam Stephenson]

* Add <%= escape_once html %> to escape html while leaving any currently escaped entities alone.  Fix button_to double-escaping issue. [Rick]

* Fix double-escaped entities, such as &amp;amp;, &amp;#123;, etc. [Rick]

* Fix deprecation warnings when rendering the template error template. [Nicholas Seckar]

* Fix routing to correctly determine when generation fails. Closes #6300. [psross].

* Fix broken assert_generates when extra keys are being checked. [Jamis Buck]

* Replace KCODE checks with String#chars for truncate.  Closes #6385 [Manfred Stienstra]
